# inf2610-t2

./: .gitmodules  CMakeLists.txt  README.md  main.c
assets/shaders/: geometry-main.frag  geometry-main.vert  regular-main.frag  regular-main.vert  shading-main.frag  shading-main.vert
